# xtc2Cube

./: CMakeLists.txt  README.md
src/: main.cpp
src/inout/: GroParser.cpp  GroParser.h
xdrfile-1.1.4/: Makefile  libtool
xdrfile-1.1.4/autom4te.cache/: requests
xdrfile-1.1.4/include/: Makefile
xdrfile-1.1.4/src/: Makefile
xdrfile-1.1.4/src/.deps/: xdrfile.Plo
xdrfile-1.1.4/src/python/: Makefile
